refactor: :art: webhooks now use a form for adding/editing and can be tested
